Fix z-index of captions

--- a/src/scss/fotorama.scss
+++ b/src/scss/fotorama.scss
@@ -305,7 +305,7 @@ $time: 300ms;
 
 .fotorama__caption {
   position: absolute;
-  z-index: 11;
+  z-index: 12;
   bottom: 0;
   left: 0;
   max-width: 100%;
